reimplemented push, pop and groundwork for opcode reading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.py": "python",
-        "string.h": "c"
+        "string.h": "c",
+        "type_traits": "c"
     }
 }
